# killall-rs

./: Cargo.toml  README.md
.github/workflows/: codql-analysis.yml  test.yml
src/: cli.rs  lib.rs  main.rs  processes.rs  signals.rs
