[package]
name = "faulx"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Rust implementation of killall"
homepage = "https://github.com/martabal/faulx"
repository = "https://github.com/martabal/faulx"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal"] }
rayon = { version = "1.11.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
