[package]
name = "faulx"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
authors = ["martabal"]
description = "Rust implementation of killall"
homepage = "https://github.com/martabal/faulx"
repository = "https://github.com/martabal/faulx"
keywords = ["killall"]
categories = ["command-line-utilities", "os"]

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal"] }
rayon = { version = "1.11.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[lints.clippy]
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
